--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -48,7 +47,7 @@
 </head>
 <body>
   <h1>DSTREET COMPANY</h1>
-  <h2>ACHE 3 FIGURAS IGUAIS E GANHE O PRÊMIO!</h2>
+  <h2>ACHE 3 FIGURAS IGUAIS E<br>GANHE O PRÊMIO!</h2>
   <p id="chances">Chances restantes: 0</p>
 
   <button id="pay5">Pagar R$5,00 (1 chance)</button><br>
@@ -90,4 +89,3 @@
   </script>
 </body>
 </html>
-
