--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-por Dstreet.company
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -6,160 +5,142 @@ por Dstreet.company
   <title>Raspadinha DStreet</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       background: #111;
-      color: #fff;
+      font-family: Arial, sans-serif;
       text-align: center;
-      padding: 20px;
+      color: white;
+      margin: 0;
+      padding: 0;
     }
+
     h1 {
       color: #FFD700;
-    }
-    button {
-      background: #FFD700;
-      border: none;
-      padding: 15px 25px;
-      margin: 10px;
-      font-size: 18px;
-      font-weight: bold;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-    .pix-code {
-      background: #fff;
-      color: #000;
-      padding: 15px;
-      margin-top: 10px;
-      border-radius: 10px;
-      white-space: pre-wrap;
-      word-break: break-word;
-      display: none;
-    }
-    .pix-area {
-      margin-bottom: 30px;
-    }
-    #raspadinha {
-      display: none;
-      margin-top: 30px;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 100px);
-      gap: 10px;
-      justify-content: center;
+      font-size: 2em;
       margin-top: 20px;
     }
+
+    .sub {
+      color: white;
+      font-size: 0.9em;
+      margin-top: 5px;
+    }
+
+    .button {
+      background: #FFD700;
+      color: black;
+      font-weight: bold;
+      border: none;
+      padding: 15px 30px;
+      border-radius: 12px;
+      font-size: 1.2em;
+      cursor: pointer;
+      margin: 15px auto;
+      width: 80%;
+      max-width: 300px;
+      display: block;
+    }
+
+    .grid {
+      display: none;
+      grid-template-columns: repeat(3, 100px);
+      grid-gap: 10px;
+      justify-content: center;
+      margin-top: 30px;
+    }
+
     .cell {
-      background: #ccc;
+      background: #222;
       width: 100px;
       height: 100px;
-      font-size: 36px;
-      line-height: 100px;
-      border-radius: 10px;
-      cursor: pointer;
+      font-size: 2.5em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 12px;
+      color: #444;
       user-select: none;
+      cursor: pointer;
     }
-    .hidden {
-      color: transparent;
+
+    .scratched {
+      color: white;
     }
   </style>
 </head>
 <body>
-
+  <div class="sub">por Dstreet.company</div>
   <h1>Raspadinha DStreet</h1>
 
-  <div class="pix-area">
-    <button id="btn5">PAGAR R$5 - 1 CHANCE</button><br/>
-    <div id="pix5" class="pix-code">
-      00020126930014br.gov.bcb.pix0136a7072ee1-b3f4-465a-a0cf-a348646a275f02311 chance de levar 10 camisetas 52040000530398654045.005802BR5924David Fonsin Cavalcanti 6008Brasilia62240520daqr1365757693274784630470DC
-      <br><br>
-      APÓS PAGAMENTO, MANDAR COMPROVANTE PELO <a href="https://wa.me/5511913304443" target="_blank">WHATSAPP</a>
-    </div>
-  </div>
+  <button class="button" id="btn5">PAGAR R$5 - 1 CHANCE</button>
+  <button class="button" id="btn10">PAGAR R$10 - 3 CHANCES</button>
+  <button class="button" id="btn20">PAGAR R$20 - 6 CHANCES</button>
 
-  <div class="pix-area">
-    <button id="btn10">PAGAR R$10 - 3 CHANCES</button><br/>
-    <div id="pix10" class="pix-code">
-      00020126940014br.gov.bcb.pix0136a7072ee1-b3f4-465a-a0cf-a348646a275f02323 chances de levar 10 camisetas!520400005303986540510.005802BR5924David Fonsin Cavalcanti 6008Brasilia62240520daqr13657576934012906304C907
-      <br><br>
-      APÓS PAGAMENTO, MANDAR COMPROVANTE PELO <a href="https://wa.me/5511913304443" target="_blank">WHATSAPP</a>
-    </div>
-  </div>
-
-  <div class="pix-area">
-    <button id="btn20">PAGAR R$20 - 6 CHANCES</button><br/>
-    <div id="pix20" class="pix-code">
-      00020126940014br.gov.bcb.pix0136a7072ee1-b3f4-465a-a0cf-a348646a275f02326 chances de levar 10 camisetas 520400005303986540520.005802BR5924David Fonsin Cavalcanti 6008Brasilia62240520daqr13657576935260736304DE32
-      <br><br>
-      APÓS PAGAMENTO, MANDAR COMPROVANTE PELO <a href="https://wa.me/5511913304443" target="_blank">WHATSAPP</a>
-    </div>
-  </div>
-
-  <div id="raspadinha">
-    <h2>Raspe e descubra!</h2>
-    <div class="grid" id="grid"></div>
-  </div>
+  <div class="grid" id="raspadinha"></div>
 
   <script>
-    let holdTimer;
-    const holdDuration = 8000;
-    let currentChances = 0;
+    let holdTimer = null;
 
-    const showPix = (id) => {
-      document.querySelectorAll(".pix-code").forEach(el => el.style.display = "none");
-      document.getElementById("pix" + id).style.display = "block";
-    }
-
-    const startHold = (btn, chances) => {
-      holdTimer = setTimeout(() => {
-        currentChances = chances;
-        startRaspadinha();
-      }, holdDuration);
-    };
-
-    const cancelHold = () => {
-      clearTimeout(holdTimer);
-    };
-
-    const buttons = [
-      { id: "btn5", chances: 1 },
-      { id: "btn10", chances: 3 },
-      { id: "btn20", chances: 6 },
-    ];
-
-    buttons.forEach(({ id, chances }) => {
-      const btn = document.getElementById(id);
-      btn.addEventListener("click", () => showPix(id.replace("btn", "")));
-      btn.addEventListener("mousedown", () => startHold(btn, chances));
-      btn.addEventListener("mouseup", cancelHold);
-      btn.addEventListener("mouseleave", cancelHold);
-    });
-
-    const startRaspadinha = () => {
-      document.getElementById("raspadinha").style.display = "block";
-      const grid = document.getElementById("grid");
+    function criarRaspadinha() {
+      const grid = document.getElementById("raspadinha");
       grid.innerHTML = "";
+      grid.style.display = "grid";
 
-      const items = Array(9).fill("❌");
-      let count = 0;
-      while (count < 2) {
-        const rand = Math.floor(Math.random() * 9);
-        if (items[rand] === "❌") {
-          items[rand] = "👕";
-          count++;
+      const celulas = Array(9).fill("❌");
+      let prêmiosColocados = 0;
+      while (prêmiosColocados < 2) {
+        const idx = Math.floor(Math.random() * 9);
+        if (celulas[idx] === "❌") {
+          celulas[idx] = "👕";
+          prêmiosColocados++;
         }
       }
 
-      items.forEach(item => {
+      celulas.forEach((valor, i) => {
         const cell = document.createElement("div");
-        cell.className = "cell hidden";
-        cell.textContent = item;
+        cell.classList.add("cell");
+        cell.textContent = "⬛";
         cell.addEventListener("click", () => {
-          cell.classList.remove("hidden");
+          if (!cell.classList.contains("scratched")) {
+            cell.classList.add("scratched");
+            cell.textContent = valor;
+          }
         });
         grid.appendChild(cell);
       });
-    };
+    }
+
+    function configurarBotaoSecreto(idBotao) {
+      const botao = document.getElementById(idBotao);
+
+      botao.addEventListener("mousedown", () => {
+        holdTimer = setTimeout(() => {
+          criarRaspadinha();
+        }, 8000); // 8 segundos
+      });
+
+      botao.addEventListener("mouseup", () => {
+        clearTimeout(holdTimer);
+      });
+
+      botao.addEventListener("mouseleave", () => {
+        clearTimeout(holdTimer);
+      });
+
+      // Para celular
+      botao.addEventListener("touchstart", () => {
+        holdTimer = setTimeout(() => {
+          criarRaspadinha();
+        }, 8000);
+      });
+
+      botao.addEventListener("touchend", () => {
+        clearTimeout(holdTimer);
+      });
+    }
+
+    configurarBotaoSecreto("btn5");
+    configurarBotaoSecreto("btn10");
+    configurarBotaoSecreto("btn20");
   </script>
 </body>
 </html>
