--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
- <html lang="pt-BR">
+!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -86,18 +87,19 @@
       grid.style.display = "grid";
 
       const celulas = Array(9).fill("❌");
-      let prêmiosColocados = 0;
-      while (prêmiosColocados < 2) {
-        const idx = Math.floor(Math.random() * 9);
-        if (celulas[idx] === "❌") {
-          celulas[idx] = "👕";
-          prêmiosColocados++;
+      let prêmios = 0;
+
+      while (prêmios < 2) {
+        const i = Math.floor(Math.random() * 9);
+        if (celulas[i] === "❌") {
+          celulas[i] = "👕";
+          prêmios++;
         }
       }
 
-      celulas.forEach((valor, i) => {
+      celulas.forEach(valor => {
         const cell = document.createElement("div");
-        cell.classList.add("cell");
+        cell.className = "cell";
         cell.textContent = "⬛";
         cell.addEventListener("click", () => {
           if (!cell.classList.contains("scratched")) {
@@ -109,38 +111,32 @@
       });
     }
 
-    function configurarBotaoSecreto(idBotao) {
-      const botao = document.getElementById(idBotao);
+    function ativarBotaoSecreto(id) {
+      const btn = document.getElementById(id);
 
-      botao.addEventListener("mousedown", () => {
-        holdTimer = setTimeout(() => {
-          criarRaspadinha();
-        }, 8000); // 8 segundos
-      });
-
-      botao.addEventListener("mouseup", () => {
-        clearTimeout(holdTimer);
-      });
-
-      botao.addEventListener("mouseleave", () => {
-        clearTimeout(holdTimer);
-      });
-
-      // Para celular
-      botao.addEventListener("touchstart", () => {
+      const iniciarContagem = () => {
         holdTimer = setTimeout(() => {
           criarRaspadinha();
         }, 8000);
-      });
+      };
 
-      botao.addEventListener("touchend", () => {
+      const cancelarContagem = () => {
         clearTimeout(holdTimer);
-      });
+      };
+
+      btn.addEventListener("mousedown", iniciarContagem);
+      btn.addEventListener("mouseup", cancelarContagem);
+      btn.addEventListener("mouseleave", cancelarContagem);
+
+      // Touch para mobile
+      btn.addEventListener("touchstart", iniciarContagem);
+      btn.addEventListener("touchend", cancelarContagem);
+      btn.addEventListener("touchcancel", cancelarContagem);
     }
 
-    configurarBotaoSecreto("btn5");
-    configurarBotaoSecreto("btn10");
-    configurarBotaoSecreto("btn20");
+    ativarBotaoSecreto("btn5");
+    ativarBotaoSecreto("btn10");
+    ativarBotaoSecreto("btn20");
   </script>
 </body>
 </html>
