Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+APÓS REALIZAR O PAGAMENTO E MANDAR O COMPROVANTE! VOCÊ IRA RECEBER UM LINK QUE TE DIRECIONA PARA A RASPADINHA!
 
-<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
